Correct fa cdn and padding

--- a/assets/css/prashant.css
+++ b/assets/css/prashant.css
@@ -5,5 +5,8 @@
     margin-top: 25px;
 }
 .currentwork_image{
-    margin-top: 90px !important;
+    margin-top: 90px;
+}
+.water_drop{
+    color: white;
 }
